--- a/.github/workflows/stem_sqlite.yaml
+++ b/.github/workflows/stem_sqlite.yaml
@@ -2,6 +2,9 @@ name: stem_sqlite
 
 on:
   push:
+    branches:
+      - master
+      - main
     paths:
       - 'packages/stem_sqlite/**'
       - 'packages/stem/**'
