--- a/.github/workflows/stem.yaml
+++ b/.github/workflows/stem.yaml
@@ -2,6 +2,9 @@ name: stem
 
 on:
   push:
+    branches:
+      - master
+      - main
     paths:
       - 'packages/stem/**'
       - 'packages/stem_adapter_tests/**'
