--- a/.github/workflows/stem_cli.yaml
+++ b/.github/workflows/stem_cli.yaml
@@ -2,6 +2,9 @@ name: stem_cli
 
 on:
   push:
+    branches:
+      - master
+      - main
     paths:
       - 'packages/stem_cli/**'
       - 'packages/stem/**'
