--- a/packages/dashboard/analysis_options.yaml
+++ b/packages/dashboard/analysis_options.yaml
@@ -12,7 +12,7 @@
 # The core lints are also what is used by pub.dev for scoring packages.
 
 # include: package:lints/recommended.yaml
-include: package:very_good_analysis/analysis_options.10.0.0.yaml
+include: package:very_good_analysis/analysis_options.yaml
 
 analyzer:
   exclude:
