--- a/packages/stem_adapter_tests/analysis_options.yaml
+++ b/packages/stem_adapter_tests/analysis_options.yaml
@@ -1,5 +1,5 @@
 # include: package:lints/recommended.yaml
-include: package:very_good_analysis/analysis_options.10.0.0.yaml
+include: package:very_good_analysis/analysis_options.yaml
 
 analyzer:
   exclude:
