--- a/packages/stem/example/task_context_mixed/justfile
+++ b/packages/stem/example/task_context_mixed/justfile
@@ -1,9 +1,13 @@
 import "../Justfile.common"
 
 ROOT := justfile_directory()
+COMPOSE_FILE := env_var_or_default("COMPOSE_FILE", "")
+DEPS_SERVICES := env_var_or_default("DEPS_SERVICES", "")
 BUILD_DIR := env_var_or_default("BUILD_DIR", "build")
 ENV_FILE := env_var_or_default("ENV_FILE", ".env")
 SESSION := env_var_or_default("SESSION", "stem-task-context-mixed")
+PROJECT_NAME := env_var_or_default("PROJECT_NAME", SESSION)
+COMPOSE_ENV := ""
 BROKER_PATH := env_var_or_default(
     "STEM_SQLITE_BROKER_PATH",
     "task_context_mixed_broker.sqlite",
