Add stem coverage workflow and helpers

--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,7 @@ task.md
 *.iml
 .DS_Store
 .lh/
-cloud/
+# cloud/
+packages/cloud/coverage/
+packages/*/coverage/*
+!packages/*/coverage/coverage.json
