--- a/.github/workflows/stem.yaml
+++ b/.github/workflows/stem.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y sqlite3 libsqlite3-dev
+          sudo apt-get install -y sqlite3 libsqlite3-dev lcov
       - uses: ./.github/actions/setup-test-services
       - uses: dart-lang/setup-dart@v1
         with:
@@ -40,4 +40,10 @@ jobs:
         run: dart pub get
       - name: Run stem package tests
         working-directory: packages/stem
-        run: dart test --exclude-tags soak
+        run: dart test --exclude-tags soak --coverage=coverage
+      - name: Format coverage
+        working-directory: packages/stem
+        run: dart run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --report-on=lib
+      - name: Check coverage threshold
+        working-directory: packages/stem
+        run: dart run ../../tool/coverage/coverage_badge.dart --lcov coverage/lcov.info --out coverage/coverage.json --min 80
