--- a/.github/workflows/stem_cli.yaml
+++ b/.github/workflows/stem_cli.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y sqlite3 libsqlite3-dev
+          sudo apt-get install -y sqlite3 libsqlite3-dev lcov
       - uses: ./.github/actions/setup-test-services
       - uses: dart-lang/setup-dart@v1
         with:
@@ -44,4 +44,10 @@ jobs:
         run: dart pub get
       - name: Run stem_cli tests
         working-directory: packages/stem_cli
-        run: dart test
+        run: dart test --coverage=coverage
+      - name: Format coverage
+        working-directory: packages/stem_cli
+        run: dart run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --report-on=lib
+      - name: Check coverage threshold
+        working-directory: packages/stem_cli
+        run: dart run ../../tool/coverage/coverage_badge.dart --lcov coverage/lcov.info --out coverage/coverage.json --min 80
