--- a/packages/stem_cli/pubspec.yaml
+++ b/packages/stem_cli/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   yaml: ^3.1.3
 
 dev_dependencies:
+  coverage: ^1.15.0
   lints: ^6.0.0
   test: ^1.26.3
   very_good_analysis: ^10.0.0
