--- a/packages/stem_postgres/pubspec.yaml
+++ b/packages/stem_postgres/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.10.4
+  coverage: ^1.15.0
   lints: ^6.0.0
   ormed_cli: ^0.1.0-dev+6
   stem_adapter_tests: ^0.1.0-dev
