--- a/packages/stem_redis/pubspec.yaml
+++ b/packages/stem_redis/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   stem: ^0.1.0-dev
 
 dev_dependencies:
+  coverage: ^1.15.0
   lints: ^6.0.0
   stem_adapter_tests: ^0.1.0-dev
   test: ^1.26.3
