--- a/packages/stem_sqlite/pubspec.yaml
+++ b/packages/stem_sqlite/pubspec.yaml
@@ -17,7 +17,8 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.10.4
+  coverage: ^1.15.0
   lints: ^6.0.0
   stem_adapter_tests: ^0.1.0-dev
   test: ^1.26.3
-  very_good_analysis: 
+  very_good_analysis: ^10.0.0
