Update dashboard deps and workspace overrides

--- a/packages/dashboard/pubspec.yaml
+++ b/packages/dashboard/pubspec.yaml
@@ -9,7 +9,7 @@ dependencies:
   intl: ^0.20.2
   meta: ^1.17.0
   ormed: ^0.1.0-dev+6
-  routed: ^0.2.0
+  routed: ^0.3.0
   routed_hotwire: ^0.1.0
   stem: ^0.1.0-dev
   stem_cli: ^0.1.0-dev
@@ -19,25 +19,18 @@ dependencies:
 
 dev_dependencies:
   lints: ^6.0.0
-  property_testing: ^0.2.1
-  routed_testing: ^0.2.1+1
-  server_testing: ^0.2.0
+  property_testing: ^0.3.0
+  routed_testing: ^0.3.0
+  server_testing: ^0.3.0
   test: ^1.26.3
   very_good_analysis: ^10.0.0
 
 dependency_overrides:
   contextual: ^2.0.0
-  property_testing:
-    path: ../../../routed_ecosystem/packages/property_testing
+  crypto_keys:
+    path: ../../tool/third_party/crypto_keys
+  pointycastle: 3.6.2
   redis: ^4.0.0
-  routed:
-    path: ../../../routed_ecosystem/packages/routed
-  routed_hotwire:
-    path: ../../../routed_ecosystem/packages/routed_hotwire
-  routed_testing:
-    path: ../../../routed_ecosystem/packages/server_testing/routed_testing
-  server_testing:
-    path: ../../../routed_ecosystem/packages/server_testing/server_testing
   stem:
     path: ../stem
   stem_cli:
@@ -48,3 +41,4 @@ dependency_overrides:
     path: ../stem_redis
   stem_sqlite:
     path: ../stem_sqlite
+  timezone: 0.11.0
