--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,5 +9,14 @@ workspace:
   - packages/stem_postgres
   - packages/stem_cli
   - packages/stem/example/docs_snippets
+  - packages/cloud/stem_cloud_protocol
+  - packages/cloud/stem_cloud_gateway
+  - packages/cloud/stem_cloud_worker
 dev_dependencies:
+  coverage: ^1.7.2
   very_good_analysis: ^10.0.0
+dependency_overrides:
+  crypto_keys:
+    path: tool/third_party/crypto_keys
+  timezone: 0.11.0
+  pointycastle: 3.6.2
