--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,7 @@ environment:
   sdk: ">=3.9.2 <4.0.0"
 workspace:
   - packages/stem
+  - packages/stem_builder
   - packages/stem_sqlite
   - packages/stem_adapter_tests
   - packages/stem_redis
