--- a/packages/stem_builder/pubspec.yaml
+++ b/packages/stem_builder/pubspec.yaml
@@ -1,22 +1,23 @@
 name: stem_builder
 description: Build-time registry generator for annotated Stem workflows and tasks.
 version: 0.1.0-dev
+
 repository: https://github.com/kingwill101/stem
 resolution: workspace
 environment:
   sdk: ">=3.9.2 <4.0.0"
 
 dependencies:
-  analyzer: ^9.0.0
-  build: ^4.0.3
-  dart_style: ^3.0.0
+  analyzer: ^10.0.1
+  build: ^4.0.4
+  dart_style: ^3.1.4
   glob: ^2.1.3
   source_gen: ^4.1.2
   stem: ^0.1.0-dev
 
 dev_dependencies:
-  build_runner: ^2.4.16
-  build_test: ^3.0.0
+  build_runner: ^2.10.5
+  build_test: any
   lints: ^6.0.0
-  test: ^1.26.3
+  test: ^1.29.0
   very_good_analysis: ^10.0.0
