--- a/packages/dashboard/pubspec.yaml
+++ b/packages/dashboard/pubspec.yaml
@@ -9,8 +9,8 @@ dependencies:
   intl: ^0.20.2
   meta: ^1.18.0
   ormed: ^0.1.0-dev+10
-  routed: ^0.3.1
-  routed_hotwire: ^0.1.1
+  routed: ^0.3.2
+  routed_hotwire: ^0.1.2
   stem: ^0.1.0-dev
   stem_cli: ^0.1.0-dev
   stem_postgres: ^0.1.0-dev
@@ -19,13 +19,14 @@ dependencies:
 
 dev_dependencies:
   lints: ^6.0.0
-  property_testing: ^0.3.1
-  routed_testing: ^0.3.1
-  server_testing: ^0.3.1
+  property_testing: ^0.3.2
+  routed_testing: ^0.3.2
+  server_testing: ^0.3.2
   test: ^1.29.0
   very_good_analysis: ^10.0.0
 
 dependency_overrides:
+  analyzer: ^10.0.1
   stem:
     path: ../stem
   stem_cli:
