--- a/packages/stem/pubspec.yaml
+++ b/packages/stem/pubspec.yaml
@@ -17,7 +17,24 @@ dependencies:
   glob: ^2.1.3
   meta: ^1.18.0
   timezone: ^0.11.0
+  uuid: ^4.5.2
   yaml: ^3.1.3
+
+dev_dependencies:
+  async: ^2.13.0
+  coverage: ^1.15.0
+  gha: ^0.0.2
+  gha_cli: ^1.0.1
+  lints: ^6.0.0
+  path: ^1.9.1
+  property_testing: ^0.3.2
+  stem_adapter_tests: ^0.1.0-dev
+  #  stem_cli: ^0.1.0-dev
+  #  stem_postgres: ^0.1.0-dev
+  #  stem_redis: ^0.1.0-dev
+  #  stem_sqlite: ^0.1.0-dev
+  test: ^1.29.0
+  very_good_analysis: ^10.0.0
 
 keywords:
   - background-jobs
@@ -31,21 +48,7 @@ topics:
   - message-queue
   - observability
 
-dev_dependencies:
-  async: ^2.13.0
-  coverage: ^1.15.0
-  gha: ^0.0.2
-  gha_cli: ^1.0.1
-  lints: ^6.0.0
-  path: ^1.9.1
-  property_testing: ^0.3.2
-  stem_adapter_tests: ^0.1.0-dev
-  stem_cli: ^0.1.0-dev
-  stem_postgres: ^0.1.0-dev
-  stem_redis: ^0.1.0-dev
-  stem_sqlite: ^0.1.0-dev
-  test: ^1.29.0
-  very_good_analysis: ^10.0.0
+
 
 false_secrets:
   - /example/microservice/certs/*
