refactor(stem_redis): migrate ID generation to UUID v7
Replace timestamp-based ID generation with UUID v7:
- redis_lock_store.dart: Lock owner IDs use UUID v7
- redis_broker.dart: Consumer IDs use UUID v7

Adds uuid ^4.5.2 dependency to pubspec.yaml.

--- a/packages/stem_redis/pubspec.yaml
+++ b/packages/stem_redis/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   collection: ^1.19.1
   redis: ^4.0.0
   stem: ^0.1.0-dev
+  uuid: ^4.5.2
 
 dev_dependencies:
   coverage: ^1.15.0
