--- a/packages/stem_sqlite/pubspec.yaml
+++ b/packages/stem_sqlite/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   ormed_sqlite: ^0.1.0-dev+10
   path: ^1.9.1
   stem: ^0.1.0-dev
+  uuid: ^4.5.2
 
 dev_dependencies:
   build_runner: ^2.10.5
