--- a/packages/stem/example/annotated_workflows/pubspec.yaml
+++ b/packages/stem/example/annotated_workflows/pubspec.yaml
@@ -8,8 +8,8 @@ environment:
   sdk: ">=3.9.2 <4.0.0"
 
 dependencies:
-  stem: ^0.1.0-dev
+  stem: ^0.1.0
 
 dev_dependencies:
   build_runner: ^2.10.4
-  stem_builder: ^0.1.0-dev
+  stem_builder: ^0.1.0
