--- a/packages/stem/pubspec.yaml
+++ b/packages/stem/pubspec.yaml
@@ -1,6 +1,6 @@
 name: stem
 description: "Stem is a Dart-native background job platform with Redis Streams, retries, scheduling, observability, and security tooling."
-version: 0.1.0-dev
+version: 0.1.0
 repository: https://github.com/kingwill101/stem
 resolution: workspace
 environment:
@@ -28,11 +28,11 @@ dev_dependencies:
   lints: ^6.0.0
   path: ^1.9.1
   property_testing: ^0.3.2
-  stem_adapter_tests: ^0.1.0-dev
-  #  stem_cli: ^0.1.0-dev
-  #  stem_postgres: ^0.1.0-dev
-  #  stem_redis: ^0.1.0-dev
-  #  stem_sqlite: ^0.1.0-dev
+  stem_adapter_tests: ^0.1.0
+  #  stem_cli: ^0.1.0
+  #  stem_postgres: ^0.1.0
+  #  stem_redis: ^0.1.0
+  #  stem_sqlite: ^0.1.0
   test: ^1.29.0
   very_good_analysis: ^10.0.0
 
