--- a/packages/stem_adapter_tests/pubspec.yaml
+++ b/packages/stem_adapter_tests/pubspec.yaml
@@ -1,13 +1,13 @@
 name: stem_adapter_tests
 description: Shared contract test suites for Stem broker and result backend adapters.
-version: 0.1.0-dev
+version: 0.1.0
 repository: https://github.com/kingwill101/stem
 resolution: workspace
 environment:
   sdk: ">=3.9.2 <4.0.0"
 
 dependencies:
-  stem: ^0.1.0-dev
+  stem: ^0.1.0
   test: ^1.29.0
 
 dev_dependencies:
