--- a/packages/stem_builder/pubspec.yaml
+++ b/packages/stem_builder/pubspec.yaml
@@ -1,6 +1,6 @@
 name: stem_builder
 description: Build-time registry generator for annotated Stem workflows and tasks.
-version: 0.1.0-dev
+version: 0.1.0
 
 repository: https://github.com/kingwill101/stem
 resolution: workspace
@@ -13,7 +13,7 @@ dependencies:
   dart_style: ^3.1.4
   glob: ^2.1.3
   source_gen: ^4.1.2
-  stem: ^0.1.0-dev
+  stem: ^0.1.0
 
 dev_dependencies:
   build_runner: ^2.10.5
