--- a/packages/stem_postgres/pubspec.yaml
+++ b/packages/stem_postgres/pubspec.yaml
@@ -1,6 +1,6 @@
 name: stem_postgres
 description: Postgres broker, result backend, and scheduler utilities for Stem.
-version: 0.1.0-dev
+version: 0.1.0
 repository: https://github.com/kingwill101/stem
 resolution: workspace
 environment:
@@ -9,17 +9,17 @@ environment:
 dependencies:
   artisanal: ^0.1.2
   collection: ^1.19.1
-  ormed: ^0.1.0-dev+10
-  ormed_postgres: ^0.1.0-dev+10
+  ormed: ^0.1.0
+  ormed_postgres: ^0.1.0
   path: ^1.9.1
   postgres: ^3.5.9
-  stem: ^0.1.0-dev
+  stem: ^0.1.0
   uuid: ^4.5.2
 
 dev_dependencies:
   build_runner: ^2.10.5
   coverage: ^1.15.0
   lints: ^6.0.0
-  stem_adapter_tests: ^0.1.0-dev
+  stem_adapter_tests: ^0.1.0
   test: ^1.29.0
   very_good_analysis: ^10.0.0
