--- a/packages/stem_redis/pubspec.yaml
+++ b/packages/stem_redis/pubspec.yaml
@@ -1,6 +1,6 @@
 name: stem_redis
 description: Redis broker, result backend, and scheduler utilities for Stem.
-version: 0.1.0-dev
+version: 0.1.0
 repository: https://github.com/kingwill101/stem
 resolution: workspace
 environment:
@@ -10,12 +10,12 @@ dependencies:
   async: ^2.13.0
   collection: ^1.19.1
   redis: ^4.0.0
-  stem: ^0.1.0-dev
+  stem: ^0.1.0
   uuid: ^4.5.2
 
 dev_dependencies:
   coverage: ^1.15.0
   lints: ^6.0.0
-  stem_adapter_tests: ^0.1.0-dev
+  stem_adapter_tests: ^0.1.0
   test: ^1.29.0
   very_good_analysis: ^10.0.0
