Unblock coverage checks and align README guidance

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ task.md
 # Coverage
 coverage/
 **/coverage/
+!tool/coverage/
+!tool/coverage/**
 storage/
 # OpenSpec (cloud-related)
 openspec/**/*cloud*
