--- a/.github/actions/setup-test-services/action.yaml
+++ b/.github/actions/setup-test-services/action.yaml
@@ -6,7 +6,21 @@ runs:
   steps:
     - name: Start Redis/Postgres containers
       shell: bash
-      run: docker compose -f packages/stem_cli/docker/testing/docker-compose.yml up -d
+      run: |
+        set -euo pipefail
+        export STEM_TEST_REDIS_TLS_PORT="${STEM_TEST_REDIS_TLS_PORT:-0}"
+        export STEM_TEST_REDIS_MTLS_PORT="${STEM_TEST_REDIS_MTLS_PORT:-0}"
+        for attempt in 1 2 3; do
+          if docker compose -f packages/stem_cli/docker/testing/docker-compose.yml up -d; then
+            break
+          fi
+          echo "docker compose up failed (attempt ${attempt}). Retrying..."
+          docker compose -f packages/stem_cli/docker/testing/docker-compose.yml down --remove-orphans || true
+          sleep 5
+          if [ "$attempt" -eq 3 ]; then
+            exit 1
+          fi
+        done
     - name: Wait for services to be ready
       shell: bash
       run: |
@@ -33,13 +47,19 @@ runs:
     - name: Export STEM_TEST_* environment variables
       shell: bash
       run: |
+        redis_tls_mapping=$(docker compose -f packages/stem_cli/docker/testing/docker-compose.yml port redis_tls 6379)
+        redis_tls_port=${redis_tls_mapping##*:}
+        redis_mtls_mapping=$(docker compose -f packages/stem_cli/docker/testing/docker-compose.yml port redis_mtls 6379)
+        redis_mtls_port=${redis_mtls_mapping##*:}
+        echo "STEM_TEST_REDIS_TLS_PORT=${redis_tls_port}" >> "$GITHUB_ENV"
+        echo "STEM_TEST_REDIS_MTLS_PORT=${redis_mtls_port}" >> "$GITHUB_ENV"
         echo "STEM_TEST_REDIS_URL=redis://127.0.0.1:56379" >> "$GITHUB_ENV"
         echo "STEM_TEST_POSTGRES_URL=postgresql://postgres:postgres@127.0.0.1:65432/stem_test" >> "$GITHUB_ENV"
         echo "STEM_TEST_POSTGRES_TLS_URL=postgresql://postgres:postgres@localhost:65433/stem_test_tls?sslmode=verify-ca&sslrootcert=$GITHUB_WORKSPACE/packages/stem_cli/docker/testing/certs/postgres-root.crt" >> "$GITHUB_ENV"
         echo "STEM_TEST_POSTGRES_TLS_CA_CERT=$GITHUB_WORKSPACE/packages/stem_cli/docker/testing/certs/postgres-root.crt" >> "$GITHUB_ENV"
-        echo "STEM_TEST_REDIS_TLS_URL=rediss://localhost:56380/0" >> "$GITHUB_ENV"
+        echo "STEM_TEST_REDIS_TLS_URL=rediss://localhost:${redis_tls_port}/0" >> "$GITHUB_ENV"
         echo "STEM_TEST_REDIS_TLS_CA_CERT=$GITHUB_WORKSPACE/packages/stem/example/microservice/certs/ca.crt" >> "$GITHUB_ENV"
-        echo "STEM_TEST_REDIS_MTLS_URL=rediss://localhost:56381/0" >> "$GITHUB_ENV"
+        echo "STEM_TEST_REDIS_MTLS_URL=rediss://localhost:${redis_mtls_port}/0" >> "$GITHUB_ENV"
         echo "STEM_TEST_REDIS_MTLS_CA_CERT=$GITHUB_WORKSPACE/packages/stem/example/microservice/certs/ca.crt" >> "$GITHUB_ENV"
         echo "STEM_TEST_REDIS_MTLS_CLIENT_CERT=$GITHUB_WORKSPACE/packages/stem/example/microservice/certs/client.crt" >> "$GITHUB_ENV"
         echo "STEM_TEST_REDIS_MTLS_CLIENT_KEY=$GITHUB_WORKSPACE/packages/stem/example/microservice/certs/client.key" >> "$GITHUB_ENV"
