--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ workspace:
   - packages/stem
   - packages/stem_builder
   - packages/stem_sqlite
+  - packages/stem_memory
   - packages/stem_adapter_tests
   - packages/stem_redis
   - packages/stem_postgres
