fix(stem_sqlite): declare contextual dependency for pub publish

--- a/packages/stem_sqlite/pubspec.yaml
+++ b/packages/stem_sqlite/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   artisanal: ^0.1.2
   collection: ^1.19.1
+  contextual: ^2.2.0
   meta: ^1.18.0
   ormed: ^0.1.0
   ormed_sqlite: ^0.1.0
