chore(review): address remaining PR feedback

--- a/.github/workflows/stem_memory.yaml
+++ b/.github/workflows/stem_memory.yaml
@@ -23,11 +23,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y sqlite3 libsqlite3-dev lcov
-      - uses: ./.github/actions/setup-test-services
       - uses: dart-lang/setup-dart@v1
         with:
           sdk: stable
@@ -48,4 +43,7 @@ jobs:
         run: dart run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --report-on=lib
       - name: Check coverage threshold
         working-directory: packages/stem_memory
+        # Coverage currently reports 0% for stem_memory due report-on mismatch.
+        # Track raising this floor once coverage reporting is corrected.
+        # See: https://github.com/kingwill101/stem/issues/14
         run: dart run ../../tool/coverage/coverage_badge.dart --lcov coverage/lcov.info --out coverage/coverage.json --min 0
