--- a/packages/stem_memory/Taskfile.yml
+++ b/packages/stem_memory/Taskfile.yml
@@ -1,7 +1,17 @@
 version: "3"
 
+vars:
+  COVERAGE_BADGE: ../../tool/coverage/coverage_badge.dart
+
 tasks:
   test:
     desc: Run stem_memory package tests.
     cmds:
       - dart test --fail-fast
+
+  coverage:
+    desc: Run stem_memory package coverage workflow.
+    cmds:
+      - dart test --fail-fast --coverage=coverage
+      - dart run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --report-on=lib
+      - dart run {{.COVERAGE_BADGE}} --lcov coverage/lcov.info --out coverage/coverage.json --min 0
