feat: expand in-memory contract parity and docs/ci support (#13)
* Expose shared logger and wire Ormed data sources

* Add subsystem context to Stem logging

* test(adapter): add capability flags with explicit skip reporting

* feat(memory): add standalone stem_memory adapter package

* fix(memory): align in-memory store semantics with contracts

* build(task): replace core Justfiles with Taskfile test workflows

* test(adapter): only run binary payload contract for base64 encoder

* test(redis): enable broadcast fan-out contract coverage

* feat(sqlite): add broker broadcast fan-out support

* ci(stem_memory): add dedicated test workflow

* chore(release): bump stem package versions and changelogs

* docs(site): add llms outputs and broker broadcast updates

* fix(stem_sqlite): declare contextual dependency for pub publish

* fix(brokers): address broadcast receipt edge cases

* fix(stem_postgres): declare contextual dependency

* chore(review): address remaining PR feedback

* chore(ci,docs): align stem_memory test command and llm aliases

* feat(adapter-tests): split heartbeat expiry capability flag

* fix(brokers): harden broadcast receipt and cleanup handling

--- a/packages/stem_sqlite/pubspec.yaml
+++ b/packages/stem_sqlite/pubspec.yaml
@@ -1,6 +1,6 @@
 name: stem_sqlite
 description: SQLite broker and result backend for Stem.
-version: 0.1.0
+version: 0.1.1
 repository: https://github.com/kingwill101/stem
 resolution: workspace
 environment:
@@ -9,6 +9,7 @@ environment:
 dependencies:
   artisanal: ^0.1.2
   collection: ^1.19.1
+  contextual: ^2.2.0
   meta: ^1.18.0
   ormed: ^0.1.0
   ormed_sqlite: ^0.1.0
